<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CharacterCreation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.s3ns3i.degejm.CharacterCreation$PlaceholderFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/section_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/MessageLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

            <!--
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/latitudeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latitudeString" />

            <TextView
                android:id="@+id/LatitudeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

            <TextView
                android:id="@+id/LongitudeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longitudeString" />

            <TextView
                android:id="@+id/LongitudeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>-->

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/editText1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hintString"
                android:inputType="text" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/nicknameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nicknameString" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Spinner
                android:id="@+id/raceSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/raceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:layout_weight="1"
                android:text="@string/raceString" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Spinner
                android:id="@+id/classSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/classLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_weight="1"
                android:text="@string/classString" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/baseHPDecrementButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decrementString" />

            <TextView
                android:id="@+id/baseHPValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/baseHPValueString" />

            <Button
                android:id="@+id/baseHPIncrementButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/incrementString" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/baseHPString" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/baseManaDecrementButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decrementString" />

            <TextView
                android:id="@+id/baseManaValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/baseManaValueString" />

            <Button
                android:id="@+id/baseManaIncrementButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/incrementString" />

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/baseManaString" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/strDecrementButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decrementString" />

            <TextView
                android:id="@+id/strengthValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strengthValueString" />

            <Button
                android:id="@+id/strIncrementButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/incrementString" />

            <TextView
                android:id="@+id/strLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strengthString" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/agiDecrementButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decrementString" />

            <TextView
                android:id="@+id/agilityValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agilityValueString" />

            <Button
                android:id="@+id/agiIncrementButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/incrementString" />

            <TextView
                android:id="@+id/agiLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agilityString" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/intDecrementButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decrementString" />

            <TextView
                android:id="@+id/intelligenceValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intelligenceValueString" />

            <Button
                android:id="@+id/intIncrementButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/incrementString" />

            <TextView
                android:id="@+id/intLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intelligenceString" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/pointPoolLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pointPoolLabelString"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/pointPoolTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <Button
            android:id="@+id/defaultStatsButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultStatsString" />

        <RelativeLayout
            android:id="@+id/RelativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom" >

            <Button
                android:id="@+id/backButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="18dp"
                android:text="@string/backString" />

            <Button
                android:id="@+id/chooseInventoryButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/chooseInventoryString" />

        </RelativeLayout>
    </LinearLayout>

</ScrollView>
